--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "firebase-admin": "^5.0.1",
     "morgan": "^1.8.2"
   }
 }
